Codeset and API key management